tokensValidation endpoint was added
